fix: add padding-top for main content on small screens

--- a/src/bravedave/dvc/esse/esse.css
+++ b/src/bravedave/dvc/esse/esse.css
@@ -84,6 +84,12 @@ tr.text-muted>td {
   height: calc(100vh - 4.4rem);
 } */
 
+@media screen and (max-width: 767px) {
+  main[data-role="content-primary"] {
+    padding-top: .25rem;
+  }
+}
+
 @media screen and (min-width: 768px) {
 
   /* position: -webkit-sticky;
